Implemented recall upgrade